# AI-Agent-Blog-Generator

./: .dockerignore  .env.example  .gitignore  .vercelignore  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  LICENSE_POLICY.md  Makefile  NOTICE  README.md  SECURITY.md  app.py  blog_generator_prompt.txt  blog_reviewer_prompt.txt  docker-compose.yml  langgraph.json  main.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
.langgraph_api/: .langgraph_ops.pckl
api/: __init__.py  job_manager.py  routes.py
config/: ml_system_design.yaml  workflow_config.yaml
configs/: qa.ml-system-design.partial.yaml  qa.ml-system-design.retest.yaml  sample.series.yaml
data/memory/: approved_skills.json  approved_skills.md  raw_feedback_log.jsonl  raw_feedback_log.md  retrieval_log.jsonl  skill_candidates.json
docs/: DOCUMENTATION-INDEX.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_OPERATIONS.md  QUICKSTART.md  README-WORKFLOW.md  implementation-checklist.md  multi-agent-blog-workflow-design.md  workflow-architecture-overview.md
frontend/: README.md  package-lock.json  package.json
frontend/scripts/: capture-screenshots.mjs
frontend/src/: proxy.ts
src/: __init__.py
src/agents/: __init__.py  base_agent.py  code_generator_agent.py  content_writer_agent.py  diagram_agent.py  integration_agent.py  outline_agent.py  qa_agent.py  reference_agent.py  research_agent.py  series_planner_agent.py  supervisor_agent.py
tests/: test_config.py
(+157 files in other folders)
