[project]
name = "blog-series-agent"
version = "0.1.0"
description = "LangGraph-based agentic content pipeline for deep technical blog series generation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm Noncommercial License 1.0.0" }
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "langchain-core>=0.3.18",
  "langchain-openai>=0.2.8",
  "langgraph>=0.2.45",
  "langsmith>=0.1.136",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "streamlit>=1.39.0",
  "typer>=0.12.5",
  "uvicorn>=0.32.0",
  "duckduckgo-search>=8.1.1",
  "deepagents>=0.5.3,<0.6.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-mock>=3.14.0",
]

[project.scripts]
blog-series-agent = "blog_series_agent.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_series_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
